Fixed build scripts and executable files.
git-svn-id: http://unused-160-33.aus.redhat.com/svn/penrose-server/branches/1.1@597 04c32f3d-caf7-0310-9fe0-d49f5cee804d