@@ -99,36 +99,7 @@ if [ -n "$CLASSPATH" ] ; then
 fi
 
 LOCALCLASSPATH=$LOCALCLASSPATH:$JAVA_HOME/lib/tools.jar
-
-# add in the required dependency .jar files
-for i in "$PENROSE_LIB"/*.jar
-do
-  # if the directory is empty, then it will return the input string
-  # this is stupid, so case for it
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$i":"$LOCALCLASSPATH"
-    fi
-  fi
-done
-
-# add in the optional dependency .jar files
-for i in "$PENROSE_LIB"/ext/*.jar
-do
-  # if the directory is empty, then it will return the input string
-  # this is stupid, so case for it
-  if [ -f "$i" ] ; then
-    if [ -z "$LOCALCLASSPATH" ] ; then
-      LOCALCLASSPATH="$i"
-    else
-      LOCALCLASSPATH="$i":"$LOCALCLASSPATH"
-    fi
-  fi
-done
-
-LOCALCLASSPATH="$PENROSE_HOME/conf:$LOCALCLASSPATH"
+LOCALLIBPATH=$PENROSE_HOME/lib:$PENROSE_HOME/lib/ext:$PENROSE_HOME/schema/ext:$PENROSE_HOME/server/lib
 
 # For Cygwin, switch paths to Windows format before running java
 if $cygwin; then
@@ -136,10 +107,12 @@ if $cygwin; then
   JAVA_HOME=`cygpath --windows "$JAVA_HOME"`
   CLASSPATH=`cygpath --path --windows "$CLASSPATH"`
   LOCALCLASSPATH=`cygpath --path --windows "$LOCALCLASSPATH"`
+  LOCALLIBPATH=`cygpath --path --windows "LOCALLIBPATH"`
   CYGHOME=`cygpath --windows "$HOME"`
 fi
 
 exec "$JAVACMD" $PENROSE_DEBUG_OPTS $PENROSE_OPTS \
 -classpath "$LOCALCLASSPATH" \
+-Djava.ext.dirs="$LOCALLIBPATH" \
 -Dpenrose.home="$PENROSE_HOME" \
 org.safehaus.penrose.ldap.SchemaGenerator $PENROSE_ARGS "$@"
